logs/smsprovider.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/SMSProvider-2.9.3.egg-info'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/smsprovider'...
Compiling './lib/python3.5/site-packages/smsprovider/DeviceSMSProvider.py'...
***   File "./lib/python3.5/site-packages/smsprovider/DeviceSMSProvider.py", line 107
    print "SMSProvider - class load test "
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smsprovider/HttpSMSProvider.py'...
***   File "./lib/python3.5/site-packages/smsprovider/HttpSMSProvider.py", line 454
    print "using Proxy: %r" % self.config['PROXY']
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/smsprovider/SMPPSMSProvider.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (SMPPSMSProvider.py, line 127)
Listing './share'...
Listing './share/linotp'...
Compiling './share/linotp/test_sms.py'...
***   File "./share/linotp/test_sms.py", line 41
    print 'Receiving message from:', peer
                                  ^
SyntaxError: Missing parentheses in call to 'print'

Listing './share/python-wheels'...
